Added title, axis names and fixed filter position

--- a/Code/index.html
+++ b/Code/index.html
@@ -8,10 +8,11 @@
 		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 	</head>
 	<body>
+		<p><font style="margin-left: 40px" size="6">Are Facebook-likes a valuable input for the quality of a movie?</font></p>
 		<div id="dashboard_div">
       		<!--Divs that will hold each control and chart-->
-      		<div id="filter_div"></div>
       		<div id="chart_div"></div>
+      		<div id="filter_div" style='margin-left: 40px'></div>
     	</div>
 
 
