--- a/Code/index.html
+++ b/Code/index.html
@@ -8,12 +8,20 @@
 		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 	</head>
 	<body>
-		<p><font style="margin-left: 40px" size="6">Are Facebook-likes a valuable input for the quality of a movie?</font></p>
+		<p><font style="margin-left: 40px" size="6">Are Facebook-likes a valuable input for the quality of a movie?</font></p><div style="float:right; width: 330px; margin-right: 40px">
+		<h4>The dataset</h4><br>
+		The dataset used for this visualization is provided by kaggle.com and contains 5000 movies containing loads of data about the films from IMDB<br><br>
+		<h4>The story</h4>
+		With this visualization, I want to show how a movie's Facebook-likes and its IMDB rating relate to each other. If you look at the graph you can see that usually, a higher number of Facebook-likes means the film is rated higher. However, this only goes one way, there are a lot of movies with a high rating but with zero to very little Facebook-likes.<br> Then there are of course some outliers, films with a high number of Facebook-likes but a low rating. Can you guess which film has 62 thousand likes but a rating of 1.6? 
+
+
+		</div>
 		<div id="dashboard_div">
       		<!--Divs that will hold each control and chart-->
       		<div id="chart_div"></div>
       		<div id="filter_div" style='margin-left: 40px'></div>
     	</div>
+
 
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
