--- a/Code/index.html
+++ b/Code/index.html
@@ -21,6 +21,8 @@
       		<div id="chart_div"></div>
       		<div id="filter_div" style='margin-left: 40px'></div>
     	</div>
+    	<div id='col_chart_html_tooltip'>
+    	</div>
 
 
 
@@ -29,6 +31,6 @@
 		<script type="text/javascript" src="bootstrap.js"></script>
 		<script src='data.js' type='text/javascript'></script>
 		<script src='rainbowvis.js' type='text/javascript'></script>
-		<script src='loaddata.js' type='text/javascript'></script>
+		<script src='loaddata2.js' type='text/javascript'></script>
 	</body>
 </html>
