--- a/Code/index.html
+++ b/Code/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+<style>
+#grad1 {
+    height: 200px;
+    background: white; 
+    background: linear-gradient(to left, lightblue , darkblue);
+}
+</style>
 
 	<head>
 		<title>Data Visualization</title>
@@ -8,7 +15,7 @@
 		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 	</head>
 	<body>
-		<p><font style="margin-left: 40px" size="6">Are Facebook-likes a valuable input for the quality of a movie?</font></p><div style="float:right; width: 330px; margin-right: 40px">
+		<p><font style="margin-left: 40px;" size="6">Are Facebook-likes a valuable input for the quality of a movie?</font></p><div style="float:right; width: 330px; margin-right: 40px">
 		<h4>The dataset</h4><br>
 		The dataset used for this visualization is provided by kaggle.com and contains 5000 movies containing loads of data about the films from IMDB<br><br>
 		<h4>The story</h4>
@@ -19,9 +26,8 @@
 		<div id="dashboard_div">
       		<!--Divs that will hold each control and chart-->
       		<div id="chart_div"></div>
-      		<div id="filter_div" style='margin-left: 40px'></div>
-    	</div>
-    	<div id='col_chart_html_tooltip'>
+      		<div id="filter_div" style='margin-left: 40px; width: 200px'></div>
+      		<div id="grad1"></div>
     	</div>
 
 
